Subject | Spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ body {
 }
 
 .Content {
-  margin-top: 40px;
+  margin-top: 55px;
 }
 
 .HomeContent {
